[project]
name = "agentic-systems-with-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.10",
    "langchain-core>=1.2.16",
    "langchain-groq>=1.1.2",
    "langgraph>=1.0.10",
    "python-dotenv>=1.2.1",
]
